[package]
name = "dray"
version = "0.1.0"
authors = ["Thomas Newman <tnewman@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.5"
chrono = "0.4"
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
hex = "0.4.3"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
serde = "1.0"
russh = { version = "0.40.2", features = ["flate2", "openssl"] }
russh-keys = { version = "0.40.1", features = ["openssl"] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["full", "tracing"] }
tracing = "0.1"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"], default-features = false }

# S3 Dependencies
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"

[dev-dependencies]
once_cell = "1.19.0"
rand = "0.8"
tempfile = "3.10"
testcontainers-modules = { version = "0.2.1", features = ["minio"] }
